--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Raul Oliveira #Programador</title>
+	<title>Raul Oliveira #Desenvolvedor</title>
 
 	<script async="" src="./arquivos/analytics.js.download"></script>
 
@@ -157,17 +157,14 @@
 	</div>
 
 	<div id="page" class="site">
-		<a class="skip-link screen-reader-text" href="http://demo.athemes.com/astrid/#content">Skip to content</a>
-
 		<div class="header-image">
 			<div class="header-info" style="opacity: 0;">
 				<div class="container">
 					<h4 class="header-subtext">5 minutos sobre mim</h4>
-					<h3 class="header-text">RAUL OLIVEIRA #Programador</h3><a class="button header-button" href="#primary">Espiar</a></div>
+					<h3 class="header-text">RAUL OLIVEIRA #Desenvolvedor</h3><a class="button header-button" href="#primary">Espiar</a></div>
 			</div>
-			<img class="large-header" src="./arquivos/header.jpg" width="1920" alt="Astrid">
-
-			<img class="small-header" src="./arquivos/header-mobile-1.jpg" width="1920" alt="Astrid">
+			<img class="large-header" src="./arquivos/header.jpg" width="1920">
+			<img class="small-header" src="./arquivos/header-mobile-1.jpg" width="1920">
 		</div>
 
 
@@ -473,6 +470,24 @@
 
 									<div class="testimonial astrid-3col">
 										<div class="testimonial-content">
+											<p>"Trabalhar com o Raul foi excelente. Entendeu bem a demanda, usou sua experiência para propor melhorias no projeto, cumpriu além do que foi combinado. Recomendadíssimo. Vamos trabalhar mais vezes com ele."</p>
+										</div>
+										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
+											<g transform="translate(0,-1032.3622)">
+												<path d="M 0,0 20,20 40,0" transform="translate(0,1032.3622)"></path>
+											</g>
+										</svg>
+										<h3 class="testimonial-title"><a>Marco André Bravim</a></h3>
+									</div>
+
+								</div>
+							</div>
+
+                            <div class="atblock container" style="margin-top: 20px">
+								<div class="testimonial-area clearfix">
+
+									<div class="testimonial astrid-3col">
+										<div class="testimonial-content">
 											<p>"Excelente programador, comprometido e honesto.... Realizou o serviço perfeitamente."</p>
 										</div>
 										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
@@ -482,7 +497,23 @@
 										</svg>
 										<h3 class="testimonial-title"><a>Diuliano Oliveira</a></h3>
 									</div>
+
+									<div class="testimonial astrid-3col">
+										<div class="testimonial-content">
+											<p>"Bom profissional, competente e de bom trato. 
+                                               Aberto a novas ideias e esforçado em busca do conhecimento."</p>
+										</div>
+										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
+											<g transform="translate(0,-1032.3622)">
+												<path d="M 0,0 20,20 40,0" transform="translate(0,1032.3622)"></path>
+											</g>
+										</svg>
+										<h3 class="testimonial-title"><a>Jean Richard Lima</a></h3>
+									</div>
+
+
 								</div>
+
 							</div>
 
 						</section>
