--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="pt-BR">
 
 <head>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112749925-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-112749925-1');
+	</script>
+
 
 	<link rel="shortcut icon" href="./arquivos/favicon.ico" />
 
