--- a/index.html
+++ b/index.html
@@ -451,11 +451,11 @@
 							<div class="atblock container">
 
 								<h2 class="widget-title">
-									<span class="title-decoration"></span>Oque meus clientes pensam de mim?</h2>
+									<span class="title-decoration"></span>O que meus clientes pensam de mim?</h2>
 
 								<div class="testimonial-area clearfix">
 									<div class="testimonial astrid-3col">
-										<div class="testimonial-content">
+										<div class="testimonial-content" style="height: 245px">
 											<p>"O Raul é esforçado, inteligente e conseguiu cumprir com o trabalho proposto."</p>
 										</div>
 										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
@@ -467,7 +467,7 @@
 									</div>
 
 									<div class="testimonial astrid-3col">
-										<div class="testimonial-content">
+										<div class="testimonial-content" style="height: 245px">
 											<p>"Profissional de nível de excelência nota 10, humilde, cordial e acima de tudo apto a desenvolver as atividades solicitadas.
 												 Agradecido imensamente caro Raul, sucesso a você."</p>
 										</div>
@@ -480,7 +480,7 @@
 									</div>
 
 									<div class="testimonial astrid-3col">
-										<div class="testimonial-content">
+										<div class="testimonial-content" style="height: 245px">
 											<p>"Trabalhar com o Raul foi excelente. Entendeu bem a demanda, usou sua experiência para propor melhorias no projeto, cumpriu além do que foi combinado. Recomendadíssimo. Vamos trabalhar mais vezes com ele."</p>
 										</div>
 										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
@@ -498,7 +498,7 @@
 								<div class="testimonial-area clearfix">
 
 									<div class="testimonial astrid-3col">
-										<div class="testimonial-content">
+										<div class="testimonial-content" style="height: 245px">
 											<p>"Excelente programador, comprometido e honesto.... Realizou o serviço perfeitamente."</p>
 										</div>
 										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="20">
@@ -510,7 +510,7 @@
 									</div>
 
 									<div class="testimonial astrid-3col">
-										<div class="testimonial-content">
+										<div class="testimonial-content" style="height: 245px">
 											<p>"Bom profissional, competente e de bom trato. 
                                                Aberto a novas ideias e esforçado em busca do conhecimento."</p>
 										</div>
@@ -563,7 +563,7 @@
 								</div>
 
 								<div class="footer-contact-block">
-									<span><a href="facebook.com/raulalves.ti" target="blank">Facebook: raulalves.ti</a></span>
+									<span><a href="http://www.facebook.com/raulalves.ti" target="blank">Facebook: raulalves.ti</a></span>
 			
 									<span style="margin-top: 50px"><a href="
 								https://www.linkedin.com/in/raul-alves-de-oliveira-134b1131/" target="blank">Curriculo: Linkedin</a></span>
