--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 								</div>
 							</div>
 
-                            <div class="atblock container" style="margin-top: 20px">
+                            <div class="atblock container" style="margin-top: 50px">
 								<div class="testimonial-area clearfix">
 
 									<div class="testimonial astrid-3col">
@@ -539,7 +539,7 @@
 			<div id="sidebar-footer" class="footer-widgets" role="complementary">
 				<div class="atblock container">
 								<h2 class="widget-title" style="color:#ffffff;">
-									<span class="title-decoration"></span>Entre em contato</h2>
+									<span class="title-decoration"></span>Entre em contato!</h2>
 								<div class="textwidget">
 								</div>
 							</div>
