--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 										<span class="title-decoration"></span>+ Sobre Mim</h2>
 
 									<div class="textwidget" style="color:#fcd088;">
-										<p>Tenho 25 anos de idade, no ano de 2010 iniciei o curso de Sistemas de Informação no CNEC. Atualmente trabalho como analista desenvolvedor em uma das maiores empresas do Brasil, nessa empresa juntamente a uma equipe excelente desenvolvo aplicações para o Ministério da Educação do Governo Federal.</p>
+										<p>Tenho 25 anos de idade, no ano de 2010 iniciei o curso de Sistemas de Informação no CNEC. Atualmente trabalho como analista desenvolvedor em uma das maiores empresas do Brasil <a href="http://www.squadra.com.br" target="_blank">(Squadra Tecnologia)</a>, nessa empresa juntamente a uma equipe excelente desenvolvo aplicações para o Ministério da Educação do Governo Federal.</p>
 										<p>Atuei como professor ministrando aulas em diversas disciplinas como: linguagem de programação e banco de dados, entre outras, no curso de técnico em informática do governo do estado de Minas Gerais.</p>
 										<p>Como freelancer nos horários vagos já foram centenas de xícaras de café e muitas linhas de código, guardo na bagagem experiências incríveis como um emissor de nota fiscal eletrônica que foi 100% desenvolvido por mim, entre dezenas de outros trabalhos que me agregaram muito conhecimento, e se você está lendo até aqui espero que o seu projeto se torne o próximo nessa lista.</p>
 									</div>
