--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
 								</div>
 
 								<div class="footer-contact-block">
-									<span>Fone/Zap: <62> 9 9923-8661 (Principal)</span>
-									<span>Fone/Zap: <38> 9 9987-7816</span>
+									<span>Fone/Zap: (62) 9 9923-8661 (Principal)</span>
+									<span>Fone/Zap: (38) 9 9987-7816</span>
 			
 									<span style="margin-top: 50px">Skype: raulalvesoliveira</span>
 								</div>
