--- a/index.html
+++ b/index.html
@@ -281,14 +281,6 @@
 										</div>
 									</div>
 
-
-									<div class="skill" style="color: inherit;">
-										<div class="name" style="color: inherit;">Banco de Dados</div>
-										<div class="progress-bar" style="color: inherit;">
-											<div class="progress-animate" style="width: 100%; color: inherit;"></div>
-										</div>
-									</div>
-
 									<div class="skill" style="color: inherit;">
 										<div class="name" style="color: inherit;">HTML/JS/CSS</div>
 										<div class="progress-bar" style="color: inherit;">
@@ -299,9 +291,30 @@
 									<div class="skill" style="color: inherit;">
 										<div class="name" style="color: inherit;">Zend Framework</div>
 										<div class="progress-bar" style="color: inherit;">
-											<div class="progress-animate" style="width: 80%; color: inherit;"></div>
+											<div class="progress-animate" style="width: 100%; color: inherit;"></div>
+										</div>
+                                    </div>
+                                    
+                                    <div class="skill" style="color: inherit;">
+										<div class="name" style="color: inherit;">Mysql</div>
+										<div class="progress-bar" style="color: inherit;">
+											<div class="progress-animate" style="width: 100%; color: inherit;"></div>
+										</div>
+                                    </div>
+
+                                    <div class="skill" style="color: inherit;">
+										<div class="name" style="color: inherit;">Git</div>
+										<div class="progress-bar" style="color: inherit;">
+											<div class="progress-animate" style="width: 100%; color: inherit;"></div>
 										</div>
 									</div>
+
+                                    <div class="skill" style="color: inherit;">
+										<div class="name" style="color: inherit;">Postgress</div>
+										<div class="progress-bar" style="color: inherit;">
+											<div class="progress-animate" style="width: 80%; color: inherit;"></div>
+										</div>
+                                    </div>
 
 									<div class="skill" style="color: inherit;">
 										<div class="name" style="color: inherit;">Angular</div>
@@ -313,21 +326,21 @@
 									<div class="skill" style="color: inherit;">
 										<div class="name" style="color: inherit;">JAVA</div>
 										<div class="progress-bar" style="color: inherit;">
-											<div class="progress-animate" style="width: 50%; color: inherit;"></div>
+											<div class="progress-animate" style="width: 60%; color: inherit;"></div>
+										</div>
+                                    </div>
+                                    
+                                    <div class="skill" style="color: inherit;">
+										<div class="name" style="color: inherit;">NoSql/MongoDb</div>
+										<div class="progress-bar" style="color: inherit;">
+											<div class="progress-animate" style="width: 60%; color: inherit;"></div>
 										</div>
 									</div>
 
 									<div class="skill" style="color: inherit;">
-										<div class="name" style="color: inherit;">Hibernate</div>
+										<div class="name" style="color: inherit;">Scrum</div>
 										<div class="progress-bar" style="color: inherit;">
-											<div class="progress-animate" style="width: 50%; color: inherit;"></div>
-										</div>
-									</div>
-
-									<div class="skill" style="color: inherit;">
-										<div class="name" style="color: inherit;">Struts</div>
-										<div class="progress-bar" style="color: inherit;">
-											<div class="progress-animate" style="width: 50%; color: inherit;"></div>
+											<div class="progress-animate" style="width: 60%; color: inherit;"></div>
 										</div>
 									</div>
 
