--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 									
 									<div class="project">
 										<div class="project-thumb">
-											<img width="500" height="310" src="./arquivos/limpei-log.jpg" class="attachment-astrid-project-thumb size-astrid-project-thumb wp-post-image">
+											<img width="500" height="310" src="./arquivos/limpei-logo.jpg" class="attachment-astrid-project-thumb size-astrid-project-thumb wp-post-image">
 											<div class="project-content">
 												<h3 class="project-title"><a href="https://limpei.app" target="blank">Limpei App</a></h3>
 											</div>
