--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 										<span class="title-decoration"></span>+ Sobre Mim</h2>
 
 									<div class="textwidget" style="color:#fcd088;">
-										<p>Tenho 25 anos de idade, no ano de 2010 iniciei o curso de Sistemas de Informação no CNEC. Atualmente trabalho no Núcleo de Pesquisa e Desenvolvimento de Inteligência Artificial da Indra no Brasil, onde desenvolvemos soluções em AI e Big Data. Entre outros produtos que estão sendo desenvolvidos, o principal é a plataforma cognitiva HAROLD. Trabalhamos com tecnologia de ponta e com uma equipe sensacional.</p> 
+										<p>Tenho 25 anos de idade, no ano de 2010 iniciei o curso de Sistemas de Informação no CNEC. Atualmente trabalho como freelancer em tempo integral.</p>
+										<p>Trabalhei no Núcleo de Pesquisa e Desenvolvimento de Inteligência Artificial da Indra no Brasil, onde desenvolvemos soluções em AI e Big Data. Entre outros produtos que estão sendo desenvolvidos, o principal é a plataforma cognitiva HAROLD. Trabalhamos com tecnologia de ponta e com uma equipe sensacional.</p> 
 <p>Trabalhei na Squadra Tecnologia como Analista Desenvolvedor, nesta que é uma das mais relevantes empresas do ramo a nível nacional. Tive a oportunidade de ter minha primeira experiência como desenvolvedor e descobri que essa é a profissão que realmente amo.</p>
 <p>Atuei como professor ministrando aulas em diversas disciplinas como: linguagem de programação e banco de dados, entre outras, no curso de técnico em informática do governo do estado de Minas Gerais.</p>
 <p>Como freelancer nos horários vagos já foram centenas de xícaras de café e muitas linhas de código, guardo na bagagem experiências incríveis como um emissor de nota fiscal eletrônica que foi 100% desenvolvido por mim, entre dezenas de outros trabalhos que me agregaram muito conhecimento, e se você está lendo até aqui espero que o seu projeto se torne o próximo nessa lista.</p>
